# rcps-assets2

./: .env  Cargo.toml  README.md
app/: Cargo.toml
app/configuration/: app.yaml
app/polar/: users_authorization.polar
app/src/: configuration.rs  db.rs  error_responses.rs  main.rs  permissions.rs  startup.rs  telemetry.rs  utils.rs
app/src/api/: health_check.rs  mod.rs  users.rs
app/src/auth/: authorize.rs  client.rs  jwt.rs  jwt_middleware.rs  middleware.rs  mod.rs  password.rs  session_middleware.rs
app/src/components/: mod.rs  (+2 more)
app/templates/: add-role.stpl  asset_items.stpl  edit-role.stpl  error.stpl  login.stpl  messages.stpl  nav-bar.stpl  password.stpl  roles.stpl  search-bar.stpl  title-bar.stpl  users.stpl
configuration/: app.yaml
domain/: Cargo.toml
domain/src/: lib.rs  request.rs  response.rs
entity/: Cargo.toml
entity/src/: lib.rs  organization.rs  permissions.rs  prelude.rs  roles.rs  roles_permissions.rs  sea_orm_active_enums.rs  user.rs
frontend/: Cargo.toml  index.html  tailwind.config.js
frontend/src/: main.rs  store.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230213_145127_create_user_table.rs  m20230214_094845_create_permissions_table.rs  m20230214_102737_create_roles_table.rs  m20230214_104118_create_roles_permissions_table.rs  m20230214_105658_seed_basic_rbac.rs  m20230214_145955_alter_users_add_role_fk.rs  m20230215_092319_seed_admin_user.rs  m20230221_093054_seed_additional_rbac.rs  m20230311_231515_create_organization_table.rs  m20230311_233834_create_user_table.rs
scripts/: init_db.sh  init_telemetry.sh
(+44 files in other folders)
